// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home tests renders correctly with no pet 1`] = `
<div>
  <div
    class="homePageContainer"
  >
    <div
      class="homeTop"
    >
      <div
        class="homeDesc"
      >
        <p>
          When you adopt, you'll change a homeless animal's whole world and get a new best friend.
        </p>
        <p>
          Seriously, what could be better than that?
        </p>
      </div>
      <div
        class="homeTitleImgWrap"
      >
        <h1>
          Rescue Project: 
          <br />
          Humane
        </h1>
        <div
          class="homeTopImgWrap"
        >
          <img
            alt="People Holding Pets"
            class="homeTopImg"
            src="https://github.com/viobai/seainfo6150-final-project-webapp/blob/master/src/images/homeTopImg.png?raw=true"
          />
        </div>
      </div>
      <a
        class="startBtn"
        href="/petlist"
      >
        <span>
          View All Pets
        </span>
         
        <span
          class="petIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="4.5"
              cy="9.5"
              r="2.5"
            />
            <circle
              cx="9"
              cy="5.5"
              r="2.5"
            />
            <circle
              cx="15"
              cy="5.5"
              r="2.5"
            />
            <circle
              cx="19.5"
              cy="9.5"
              r="2.5"
            />
            <path
              d="M17.34 14.86c-.87-1.02-1.6-1.89-2.48-2.91-.46-.54-1.05-1.08-1.75-1.32-.11-.04-.22-.07-.33-.09-.25-.04-.52-.04-.78-.04s-.53 0-.79.05c-.11.02-.22.05-.33.09-.7.24-1.28.78-1.75 1.32-.87 1.02-1.6 1.89-2.48 2.91-1.31 1.31-2.92 2.76-2.62 4.79.29 1.02 1.02 2.03 2.33 2.32.73.15 3.06-.44 5.54-.44h.18c2.48 0 4.81.58 5.54.44 1.31-.29 2.04-1.31 2.33-2.32.31-2.04-1.3-3.49-2.61-4.8z"
            />
          </svg>
        </span>
      </a>
    </div>
    <div
      class="homeBottom"
    >
      <img
        alt="New Adopted Pet"
        src="https://github.com/viobai/seainfo6150-final-project-webapp/blob/master/src/images/dog-family.png?raw=true"
      />
      <div
        class="emptyListMsg"
      >
        There are currently no pets available for adoption. :)
      </div>
    </div>
  </div>
</div>
`;

exports[`Home tests renders correctly with single pet 1`] = `
<div>
  <div
    class="homePageContainer"
  >
    <div
      class="homeTop"
    >
      <div
        class="homeDesc"
      >
        <p>
          When you adopt, you'll change a homeless animal's whole world and get a new best friend.
        </p>
        <p>
          Seriously, what could be better than that?
        </p>
      </div>
      <div
        class="homeTitleImgWrap"
      >
        <h1>
          Rescue Project: 
          <br />
          Humane
        </h1>
        <div
          class="homeTopImgWrap"
        >
          <img
            alt="People Holding Pets"
            class="homeTopImg"
            src="https://github.com/viobai/seainfo6150-final-project-webapp/blob/master/src/images/homeTopImg.png?raw=true"
          />
        </div>
      </div>
      <a
        class="startBtn"
        href="/petlist"
      >
        <span>
          View All Pets
        </span>
         
        <span
          class="petIcon"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <circle
              cx="4.5"
              cy="9.5"
              r="2.5"
            />
            <circle
              cx="9"
              cy="5.5"
              r="2.5"
            />
            <circle
              cx="15"
              cy="5.5"
              r="2.5"
            />
            <circle
              cx="19.5"
              cy="9.5"
              r="2.5"
            />
            <path
              d="M17.34 14.86c-.87-1.02-1.6-1.89-2.48-2.91-.46-.54-1.05-1.08-1.75-1.32-.11-.04-.22-.07-.33-.09-.25-.04-.52-.04-.78-.04s-.53 0-.79.05c-.11.02-.22.05-.33.09-.7.24-1.28.78-1.75 1.32-.87 1.02-1.6 1.89-2.48 2.91-1.31 1.31-2.92 2.76-2.62 4.79.29 1.02 1.02 2.03 2.33 2.32.73.15 3.06-.44 5.54-.44h.18c2.48 0 4.81.58 5.54.44 1.31-.29 2.04-1.31 2.33-2.32.31-2.04-1.3-3.49-2.61-4.8z"
            />
          </svg>
        </span>
      </a>
    </div>
    <div
      class="homeBottom"
    >
      <img
        alt="New Adopted Pet"
        src="https://github.com/viobai/seainfo6150-final-project-webapp/blob/master/src/images/dog-family.png?raw=true"
      />
      <div>
        <h3>
          Some of our available pets . . .
        </h3>
        <div
          class="randomPetDisplay"
        >
          <a
            class="link"
            href="/id/11111"
          >
            <div
              class="card"
            >
              <p
                class="hiddenMsg"
              >
                LEARN MORE
              </p>
              <div
                class="imgContainer"
              >
                <img
                  alt="a dog of breed Mixed Breed named Apollo"
                  src="https://raw.githubusercontent.com/viobai/seainfo6150-final-project-webapp/master/src/images/Pet/Apollo.jpeg"
                />
              </div>
              <div
                class="shortInfo"
              >
                <span
                  class="name"
                >
                  Apollo
                </span>
                 
                1 year 3 months
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
